# cmd/app/docs/swagger.yaml
@@ -7,6 +7,16 @@ definitions:
     type: object
   server.extractRequest:
     properties:
+      num_ctx:
+        example: 8192
+        type: integer
+      styles:
+        example:
+        - summary
+        - takeaways
+        items:
+          type: string
+        type: array
       url:
         example: https://www.youtube.com/watch?v=dQw4w9WgXcQ
         type: string
@@ -26,22 +36,22 @@ definitions:
     type: object
   store.ContentType:
     enum:
+    - youtube_video
+    - youtube_playlist
+    - youtube_channel
     - html
     - json
     - xml
     - binary
-    - youtube_video
-    - youtube_playlist
-    - youtube_channel
     type: string
     x-enum-varnames:
+    - ContentYouTubeVideo
+    - ContentYouTubePlaylist
+    - ContentYouTubeChannel
     - ContentHTML
     - ContentJSON
     - ContentXML
     - ContentBinary
-    - ContentYouTubeVideo
-    - ContentYouTubePlaylist
-    - ContentYouTubeChannel
   store.PlaylistItem:
     properties:
       index:
@@ -69,15 +79,18 @@ definitions:
         type: string
       fetched_at:
         type: string
-      file_path:
-        description: for binary downloads
-        type: string
       links:
         items:
           type: string
         type: array
-      text:
+      model:
         type: string
+      num_ctx:
+        type: integer
+      styles:
+        items:
+          type: string
+        type: array
       title:
         type: string
       url:
@@ -87,14 +100,10 @@ definitions:
     type: object
   store.YouTubeData:
     properties:
-      audio_path:
-        type: string
       captions:
         items:
           $ref: '#/definitions/store.CaptionTrack'
         type: array
-      channel_id:
-        type: string
       channel_name:
         type: string
       duration:
